apps/media/qbittorrent/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: qbittorrent
  namespace: media
spec:
  parentRefs:
    - name: cilium-gateway
      namespace: gateway
  hostnames:
    - qbittorrent.benwoodward.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: qbittorrent
          port: 10095
